--- a/css/my-app.css
+++ b/css/my-app.css
@@ -13,6 +13,11 @@
     src: url('../fonts/Ubuntu.ttf') format("opentype");
 }
 
+@font-face {
+    font-family: 'digit';
+    src: url('../fonts/DS-DIGIT.ttf') format("opentype");
+}
+
 html,body{
     font-family: 'Ubuntu';
 }
@@ -47,7 +52,7 @@ input::-webkit-inner-spin-button {
 }
 
 .img-icon{
-    background-color: #03a9f4;
+    background-color: #FE0000;
     color: #fff;
     height: 32px;
     width: 32px;
@@ -67,4 +72,18 @@ input::-webkit-inner-spin-button {
     max-width: 160px;
     margin: 10px auto;
     text-align: center;
+}
+
+.supervisor{
+    text-transform: uppercase;
+}
+
+.time-section{
+
+    text-align: center;
+}
+
+.time-section span{
+    font-family: digit;
+    font-size: 24px;
 }
